--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+        "guzzlehttp/guzzle": "~5.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
@@ -16,7 +17,7 @@
 			"database"
 		],
 		"psr-4": {
-			"App\\": "app/"
+			"Notes\\": "app/"
 		}
 	},
 	"autoload-dev": {
